<resources>
    <string name="app_name">101 Sandwiches</string>
    <string name="sandwich_image">Sandwich Image</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="directions">DIRECTIONS</string>
    <string name="close_list_cont_desc">Close List</string>
    <string name="favourite_sandwich_cont_desc">Favourite Sandwich</string>
    <string name="search_sandwiches_cont_desc">Search Sandwich</string>
    <string name="all_recipes">All Recipes</string>
    <string name="try_out_now">Try It Now!</string>
    <string name="go_right">Go Right</string>
    <string name="go_left">Go Left</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="close_search">Close Search</string>
    <string name="search_hint">Search Sandwich&#8230;</string>

    <string name="all_sandwiches">All Sandwiches</string>
    <string name="favourites">Favourites</string>

    <!-- MENU HEADERS -->
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_surprise_me">Surprise Me</string>
    <string name="menu_classic">Classic</string>
    <string name="menu_luxe">Luxe</string>
    <string name="menu_spice">Spice</string>
    <string name="menu_guilty">Guilty</string>
    <string name="menu_sweet">Sweet</string>
    <string name="menu_veggies">Veggies</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_remove_ads">Remove Ads</string>
    <string name="menu_other_apps">Other Apps</string>
    <string name="menu_sub_head_1">SANDWICHES</string>
    <string name="menu_sub_head_2">SUPPORT</string>

    <string name="banner_ad_unit_id">ca-app-pub-4561718730653190/3639136667</string>
    
    <!-- App Guide Texts -->
    <string name="ag_skip">Skip</string>
    <string name="ag_next">Next</string>
    <string name="ag_toApp">To Recipes</string>

    <string name="ag_intro_subtext">An exquisite app that provides you recipes to 101 sandwiches from all around the world.
        Surprise everyone with exotic sandwich recipes from the Hawaiian islands to the Japanese sea shores.</string>
    <string name="ag_intro_img_des">App Icon</string>

    <string name="ag_groups_mainText">Six Categories</string>
    <string name="ag_groups_subText">Sandwiches are categorized into six - Classic, Luxe, Spice, Sweet, Veggies and Guilty.
        Choose a category based on your mood and have fun making one from the listed choices.</string>
    <string name="ag_groups_img_des">Six Categories</string>

    <string name="ag_main_list_mainText">Beautiful Lists</string>
    <string name="ag_main_list_subText">A spectacular side scrolling list that houses all the 101 sandwiches.
        Each recipe card displays the sandwich image, name and time to make for easier selection.</string>
    <string name="ag_main_list_img_des">Main List Icon</string>

    <string name="ag_details_mainText">In Fine Detail</string>
    <string name="ag_details_subText">Each sandwich recipe is meticulously detailed. The ingredients and directions
        are thorough and in a separate layout for ease during preparation. Also check the calories of each sandwich.</string>
    <string name="ag_details_img_des">Details Icon</string>

    <string name="ag_surprise_mainText">Life Made Easy</string>
    <string name="ag_surprise_subText">Love suspense? Try "Surprise Me" to select a random sandwich. Heart your favorite sandwiches
        for quick view later. Search sandwiches with just a touch. Finding recipes was never this easy.</string>
    <string name="ag_surprise_img_des">Surprise Icon</string>

    <string name="ag_rate_mainText">Need Your Love</string>
    <string name="ag_rate_subText">The app needs your love and support. If you like it, rate in on play store and share it
        with your family and friends. The love we give away is the only love we keep. Spread some sunshine for us will you.</string>
    <string name="ag_rate_img_des">Love Icon</string>


</resources>
