<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group  android:checkableBehavior="single">
        <item android:id="@+id/md_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item android:id="@+id/md_fav_sandwiches"
            android:icon="@drawable/ic_action_favorite_heart_button"
            android:title="@string/menu_favourites" />
        <item android:id="@+id/md_surprise_me"
            android:title="@string/menu_surprise_me"
            android:icon="@drawable/ic_action_random_line"/>

        <item android:id="@+id/md_grouping_header"
            android:title="@string/menu_sub_head_1">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/md_sub_item_classic"
                    android:title="@string/menu_classic"
                    android:icon="@drawable/ic_action_sandwich_classic" />
                <item
                    android:id="@+id/md_sub_item_luxe"
                    android:title="@string/menu_luxe"
                    android:icon="@drawable/ic_action_sandwich_luxe"/>
                <item
                    android:id="@+id/md_sub_item_guilty"
                    android:title="@string/menu_guilty"
                    android:icon="@drawable/ic_action_sandwich_guilty"/>
                <item
                    android:id="@+id/md_sub_item_spice"
                    android:title="@string/menu_spice"
                    android:icon="@drawable/ic_action_sandwich_spicy"/>
                <item
                    android:id="@+id/md_sub_item_sweet"
                    android:title="@string/menu_sweet"
                    android:icon="@drawable/ic_action_sandwich_sweet"/>
                <item android:id="@+id/md_sub_item_veggies"
                    android:title="@string/menu_veggies"
                    android:icon="@drawable/ic_action_veggies"/>
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/md_sub_grouping_support"
            android:title="@string/menu_sub_head_2">
            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/md_sub_item_rate_app"
                    android:icon="@drawable/ic_action_rate_app"
                    android:title="@string/menu_rate_app" />
                <item
                    android:id="@+id/md_sub_item_other_apps"
                    android:icon="@drawable/ic_action_other_apps"
                    android:title="@string/menu_other_apps"/>
                </group>
            </menu>
        </item>
    </group>
</menu>