<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fsl_rl_ads_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <com.google.android.gms.ads.AdView
            android:id="@+id/fsl_adv_googleAds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fsl_rl_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fsl_rl_ads_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fsl_toolbar_sandwich_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:id="@+id/fsl_toolbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/greyishBlack"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/fsl_iv_action_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_magnifying_glass"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/search_sandwiches_cont_desc"/>

        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/fsl_tv_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fsl_toolbar_sandwich_list"
            android:text="Favourite"
            android:layout_centerHorizontal="true"
            android:textSize="17sp"/>
        
        <android.support.v7.widget.CardView
            android:id="@+id/fsl_cv_sandwich_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/fsl_tv_header_text"
            ads:cardElevation="10dp">

            <RelativeLayout
                android:id="@+id/fsl_cv_rl_sandwich_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/fsl_cv_iv_go_left"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@color/green"
                    android:src="@drawable/ic_left_arrow"
                    android:scaleType="center"
                    android:textColor="@color/white"
                    android:contentDescription="@string/go_left"/>

                <ImageButton
                    android:id="@+id/fsl_cv_iv_go_right"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@color/green"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_right_arrow"
                    android:scaleType="center"
                    android:textColor="@color/white"
                    android:contentDescription="@string/go_right"/>

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:text="21/101"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/fsl_cv_iv_sandwich_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fsl_cv_iv_go_left"
                    android:src="@drawable/classic_blt_sandwich"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/sandwich_image"
                    android:background="@android:drawable/dialog_holo_light_frame"/>

                <TextView
                    android:id="@+id/fls_cv_tv_sandwich_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Classic BLT Sandwich"
                    android:layout_below="@id/fsl_cv_iv_sandwich_image"
                    android:layout_marginTop="13dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/darkGreen" />

                <View
                    android:id="@+id/fsl_cv_view_dummy_1"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_below="@id/fls_cv_tv_sandwich_name"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/fsl_cv_tv_cooking_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fls_cv_tv_sandwich_name"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="10 minutes"
                    android:gravity="bottom"
                    android:drawableLeft="@drawable/ic_cooking"
                    android:drawableStart="@drawable/ic_cooking"
                    android:drawablePadding="10dp"/>

                <Button
                    android:id="@+id/fsi_lid_bt_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fsl_cv_tv_cooking_time"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/green"
                    android:text="@string/try_out_now"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

</RelativeLayout>